# slint-kdfoundation-glx-example

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  platform.h  window_adapter.cpp  window_adapter.h
